--- a/test/fixtures/educations.yml
+++ b/test/fixtures/educations.yml
@@ -1,11 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  activities: MyString
+  degree: MyString
+  endtime: 2012-10-31 19:11:03
+  institution: MyString
+  start_time: 2012-10-31 19:11:03
+  cv_id: 1
+
+two:
+  activities: MyString
+  degree: MyString
+  endtime: 2012-10-31 19:11:03
+  institution: MyString
+  start_time: 2012-10-31 19:11:03
+  cv_id: 1
