--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  address: MyString
+  description: MyText
+  exp_id: 1
+
+two:
+  address: MyString
+  description: MyText
+  exp_id: 1
