--- a/test/fixtures/experiences.yml
+++ b/test/fixtures/experiences.yml
@@ -1,11 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  description: MyString
+  end_time: 2012-10-31 23:03:37
+  job_title: MyString
+  start_time: 2012-10-31 23:03:37
+  cv_id: 1
+
+two:
+  description: MyString
+  end_time: 2012-10-31 23:03:37
+  job_title: MyString
+  start_time: 2012-10-31 23:03:37
+  cv_id: 1
